# nextrpg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: index.html  nextrpg.html  search.js
example/: common.py  config.py  exterior_scene.py  game.py  interior_scene.py  local_main.py  main.py  playground.py  sample_scene.py  title.py
nextrpg/: __init__.py  area.py  cached_decorator.py  character.py  character_config.py  character_drawing.py  character_on_screen.py  code_transformers.py  common_types.py  config.py  coordinate.py  core.py  debug_config.py  draw_on_screen.py  draw_on_screen_config.py  drawable.py  drawing.py  event.py  event_as_attr.py  event_config.py  event_transformer.py  fade.py  fade_in.py  fade_out.py  frames.py  game.py  game_loop.py  global_config.py  gui.py  gui_config.py  key_mapping_config.py  logger.py  map_helper.py  map_scene.py  map_util.py  model.py  moving_character_on_screen.py  moving_npc.py  npcs.py  player_on_screen.py  (+22 more)
pyrpgmaker/: __init__.py
pyrpgmaker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: __init__.py  test_area.py  test_character_on_screen.py  test_code_transformer.py  test_code_transformers.py  test_common_types.py  test_config.py  test_control_flow.py  test_coordinate.py  test_core.py  test_cyclic_frames.py  test_dimension.py  test_direction.py  test_draw_on_screen.py  test_drawing.py  test_event_as_attr.py  test_fade.py  test_frames.py  test_game.py  test_global_config.py  test_gui.py  test_logger.py  test_map_helper.py  test_map_scene.py  test_move.py  (+24 more)
(+849 files in other folders)
